Bug 1908761 - Simplify and improve handling of secondary sorts in DBViewWrapper. r=aleca,babolivier

To set the secondary sort, `DBViewWrapper` lets the view sort itself twice in many cases such as
entering/leaving Quick Filter or leaving Grouped By Sort, as well as just changing the sort type
itself. Since `nsMsgDBView::Sort()` already takes the secondary sort into account, these
additional calls can be removed, which can significantly improve performance depending on the
individual sort types.

When leaving Grouped By Sort, the secondary sort type will always be set to Order Received, which
prevents having a comparably slow sort type such as by From, Recipient, or Correspondents as
secondary sort in place.

Differential Revision: https://phabricator.services.mozilla.com/D217971

--HG--
extra : amend_source : 734d4576517f02968371cd35bad740906afabbfa